Using pytorch to calculate regression weights

--- a/made_with_ml/foundation/machine_learning/linear_regression/linear_reg_tut.ipynb
+++ b/made_with_ml/foundation/machine_learning/linear_regression/linear_reg_tut.ipynb
@@ -802,6 +802,22 @@
     "print (f\"mean: {np.mean(X_test, axis=0)[0]:.1f} std: {np.std(X_test, axis=0)[0]:.1f}\")\n",
     "print (f\"mean: {np.mean(y_test, axis=0)[0]:.1f}, std: {np.std(y_test, axis=0)[0]:.1f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn"
+   ]
   }
  ],
  "metadata": {
